--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 #protection-kun-obi {
+    font-family: Arial, sans-serif !important;
     position: fixed;
     height: var(--protection-kun-obi-size, 35px);
     line-height: var(--protection-kun-obi-size, 35px);
@@ -6,7 +7,7 @@
     left: 0;
     right: 0;
     color: #000000;
-    z-index: 999999;
+    z-index: 999998;
     text-align: center;
     pointer-events: none;
     opacity: 1;
@@ -24,11 +25,19 @@
 }
 
 #protection-kun-obi-close-button {
-    pointer-events: auto;
+    font-family: Arial, sans-serif !important;
+    position: fixed;
+    width: calc(var(--protection-kun-obi-size, 35px) * 0.7);
+    height: calc(var(--protection-kun-obi-size, 35px) * 0.7);
+    line-height: calc(var(--protection-kun-obi-size, 35px) * 0.7);
+    top: calc(var(--protection-kun-obi-size, 35px) * 0.15);
+    right: calc(var(--protection-kun-obi-size, 35px) * 0.15);
     cursor: pointer;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgb(0 0 0 /0.4);
     border: none;
-    color: #000000;
-    padding: 4px 10px;
-    border-radius: 8px;
+    font-size: calc(var(--protection-kun-obi-size, 35px) * 0.5);
+    color: #ffffff;
+    z-index: 999999;
+    padding: 0 6px;
+    border-radius: 50%;
 }
